tests/fixtures/valid/native_closure_scalar.lby
fn main -> i64
    let n i64 = 10
    let add_n fn(i64) -> i64 = fn x i64 -> x + n
    add_n(2)
