tests/fixtures/invalid/unsupported_struct.lby
fn main -> i64
    struct Point
        x i64
    1
